Changelog
=========

2.1.16 (unreleased)
-------------------

- Nothing changed yet.


2.1.15 (2015-02-20)
-------------------

- Re-enable exporting of ATTopics, which was disabled in mid 2009 due to broken
  marshaling of PrincipiaFolderish types, which is now fixed in CMFCore.
  [matthewwilkes]


2.1.14 (2013-12-07)
-------------------

- Update ICONMAP (.gif to .png).
  [mathias.leimgruber]



2.1.13 (2013-05-23)
-------------------

- Fixed : add menu doesn't appear for a user that can't add on folder's parent
  if this folder have a different content type.
  refs https://dev.plone.org/ticket/13582
  [thomasdesvenain]

2.1.12 (2013-03-05)
-------------------

- Fix missing references on copy of (old-style) Collection path
  criterion and relatedItems on stock content using the schema
  flag keepReferencesOnCopy.  Refs: https://dev.plone.org/ticket/9919
  [seanupton]


2.1.11 (2013-01-13)
-------------------

- Fix deprecated import from Archetypes: use atapi instead of public
  [toutpt]

2.1.10 (2012-12-09)
-------------------

- change string ownership to creators as it makes more sense
  refs http://dev.plone.org/ticket/8725
  [maartenkling]

- Make sure ATTopic.queryCatalog cannot be published. This fixes
  http://plone.org/products/plone/security/advisories/20121106/14
  [davisagli]

2.1.9 (2012-10-11)
------------------

- Silence false security warning during startup complaining about
  `ATTopic.setText`.
  [hannosch]

- Notify modified when an image is transformed
  through transform image tab.
  This updates modification date and refresh Etag.
  Refs http://dev.plone.org/ticket/13169.
  [thomasdesvenain]

- add @@download view for IFileContent
  [vangheem]

- Implement ISyndicatable for folder and topic in 4.3
  [vangheem]


2.1.8 (2012-08-18)
------------------

- Fixes album view - when scales generation failed,
  file name appeared twice.
  Refs http://dev.plone.org/ticket/13082.
  [thomasdesvenain]

- PEP 8 (ignoring W602, E301, E501 and E701).