@@ -3,7 +3,7 @@ from zope.interface import Attribute
 
 from Products.Archetypes.interfaces import IBaseContent
 from Products.Archetypes.interfaces import IBaseFolder
-from Products.CMFDynamicViewFTI.interface import ISelectableBrowserDefault
+from Products.CMFDynamicViewFTI.interfaces import ISelectableBrowserDefault
 from Products.Archetypes.interfaces import IATHistoryAware
 from Products.CMFPlone.interfaces import ISelectableConstrainTypes
 
